<resources>
    <string name="app_name">Formulas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Formula Sheet</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_pythagorean_theorem">Pathagorean Theroem</string>
    <string name="menu_basic_addition">Basic Addition</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="pythagoreanFormula">A\u00B2+B\u00B2=C\u00B2</string>
    <string name="pythagoreanFormulaString">Pythagorean Formula</string>
    <string name="electricityFormulaString">Electricity Formula</string>
    <string name="electricityFormula">V = I x R</string>
    <string name="electricityFormulaResistance">Resistance (R)</string>
    <string name="electricityFormulaVoltage">Voltage (V)</string>
    <string name="electricityFormulaCurrent">Current (I)</string>
</resources>
